Refactoring of getFile() in UriBuilderService.